--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,10 @@
-spring.application.name=remote-work-productivity
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-server.port=8080
-
-spring.datasource.url=jdbc:mysql://localhost:3306/productivity_db
-spring.datasource.username=root
-spring.datasource.password=1234
-
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.properties.hibernate.format_sql=true
-
-springdoc.swagger-ui.path=/swagger-ui.html
-
-jwt.secret=secret123
-jwt.expiration=86400000
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
