--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.application.name=demo
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Port Configuration
+server.port=9001
+server.forward-headers-strategy=framework 
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/students_demo?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate Settings
 spring.jpa.hibernate.ddl-auto=update
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# Use MySQL8Dialect for Spring Boot 3.x compatibility
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
